--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
     </header>
     <!-- chat list  / Container-->
     <div class="chat-list">
-        <div class="message outgoing">
+        <!-- <div class="message outgoing">
             <div class="message-content">
                 <img src="images/user.jpg" alt="user image" class="avatar">
                 <p class="text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Vitae, molestias!</p>
@@ -67,7 +67,7 @@
                 <p class="text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Vitae, molestias!</p>
             </div>
             <span class="icon material-symbols-rounded">content_copy</span>
-        </div>
+        </div> -->
         <!-- <div class="message incoming loading">
             <div class="message-content">
                 <img src="images/gemini.svg" alt="gemini image" class="avatar">
@@ -104,4 +104,4 @@
     <!-- external js file  -->
     <script src="main.js"></script>
 </body>
-</html>
+</html> 
