--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
         <ul class="suggestion-list">
             <li class="suggestion">
                 <h4 class="text">
-                    Help me plan a game night with my 5 best friends for under $100.
+                    Provide a brief overview of a period in history: the Islamic Golden Age.
+                    Be sure to include important dates and key figures from this period and its subsequent outcomes.
                 </h4>
                 <span class="icon material-symbols-rounded">
                     draw
@@ -29,7 +30,7 @@
             </li>
             <li class="suggestion">
                 <h4 class="text">
-                    Help me plan a game night with my 5 best friends for under $100.
+                    Explain the functional areas and what the day-to-day work of a marketing professional looks like.
                 </h4>
                 <span class="icon material-symbols-rounded">
                     lightbulb
@@ -37,7 +38,7 @@
             </li>
             <li class="suggestion">
                 <h4 class="text">
-                    Help me plan a game night with my 5 best friends for under $100.
+                    Briefly summarize this concept: Capitalism.
                 </h4>
                 <span class="icon material-symbols-rounded">
                     explore
@@ -45,7 +46,7 @@
             </li>
             <li class="suggestion">
                 <h4 class="text">
-                    Help me plan a game night with my 5 best friends for under $100.
+                    Write javascript code to sum all elements in an array.
                 </h4>
                 <span class="icon material-symbols-rounded">
                     code
@@ -91,8 +92,8 @@
                 </button>
             </div>
             <div class="action-buttons">
-                <span class="icon material-symbols-rounded">light_mode</span>
-                <span class="icon material-symbols-rounded">delete</span>
+                <span id="toggle-theme-button" class="icon material-symbols-rounded">light_mode</span>
+                <span id="delete-chat-button" class="icon material-symbols-rounded">delete</span>
             </div>
         </form>
         <p class="disclaimer-text">
